src/test/resources/invalid_tests/MissingLRNArgument.cnna
architecture MissingLRNArgument{
    def input in
    def output out
    
    in ->
    convolution(filters=64, kernel=4)
    lrn(beta=0.75, alpha=0.0001, knorm=2)
    fullyConnected(units=64, no_bias=true)
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}